HelloUltraviolet/Fixtures/RejectedSource/Procedures/DuplicateErasedOverloadSignature/Expected.uv
//! Expected diagnostic metadata for the DuplicateErasedOverloadSignature rejected-source specimen.

expectedDiagnostic("E-SEM-3032", "req.15.DuplicateErasedOverloadSignaturesForbidden")
